# BackupSoftwareServer

./: CMakeLists.txt  Jobs.cpp  Jobs.h  README.md  Server.cpp  Server.h  ServerSocket.cpp  ServerSocket.h  Session.cpp  Session.h  Socket.cpp  Socket.h  SyncedFileServer.cpp  SyncedFileServer.h  UploadJobs.cpp  UploadJobs.h  User.cpp  User.h  main.cpp  protocolMode.h
cert/: dh2048.pem  user.crt  user.key
exceptions/: dataException.h  filesystemException.h  socketException.h
